--- a/templates/login.html
+++ b/templates/login.html
@@ -33,19 +33,21 @@
                     <a href="#" class="auth-btn">Create an Account</a>
                 </li>
                 <li>
-                    <a href="/login" class="auth-btn">Login</a>
+                    <a href="#" class="auth-btn">Login</a>
                 </li>
             </ul>
         </nav>
     </header>
     <main>
-        <section class="raise-issue-container">
-            <div class="left-side">
-                
+        <section class="login-container>
+            <h2>Be aware of your power!</h2>
+            <div class="spline-container">
+            <spline-viewer url="https://prod.spline.design/lfc9sN5S8bTGi92p/scene.splinecode"></spline-viewer>
             </div>
-            <form action=" /raise-issue">
-                <h2>Be aware of your power!</h2>
-                <textarea type="text" placeholder="Enter you issue regarding academics."></textarea>
+            <form action="/login">
+                <input type="email" placeholder="Enter email">
+                <input type="password" placeholder="Enter password">
+                <input type="submit" value="Login">
             </form>
         </section>
     </main>
