made the basic template

--- a/templates/contact-us.html
+++ b/templates/contact-us.html
@@ -27,7 +27,7 @@
                     <a href="/blogs">Blogs</a>
                 </li>
                 <li>
-                    <a href="/contact-us">Contact Us</a>
+                    <a href="#">Contact Us</a>
                 </li>
                 <li>
                     <a href="/create-account" class="auth-btn">Create an Account</a>
@@ -39,13 +39,12 @@
         </nav>
     </header>
     <main>
-        <section class="raise-issue-container">
+        <section class="contact-us-container">
             <div class="left-side">
                 
             </div>
-            <form action=" /raise-issue">
-                <h2>Be aware of your power!</h2>
-                <textarea type="text" placeholder="Enter you issue regarding academics."></textarea>
+            <form action=" /contact-us">
+                <textarea type="text" placeholder="Enter the message you want to convey to us. It may be like complain, issue, problem, suggestion, bugs,etc. Please avoid spamming!!!!!!"></textarea>
                 <button type="submit">Raise Issue</button>
             </form>
         </section>
