--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,77 +1,142 @@
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: "Roboto", sans-serif;
-    box-sizing : border-box;
+    box-sizing: border-box;
 }
 
-body{
+body {
     color: black;
 
 }
-header{
-    height : 75px;
-    width : 100vw;
+
+header {
+    height: 75px;
+    width: 100vw;
     background: rgb(255, 255, 255);
-    display:flex;
+    display: flex;
     align-items: center;
-    justify-content : space-evenly;
+    justify-content: space-around;
     box-shadow: 0 0 3px black;
 }
 
-#logo{
+#logo {
     font-size: 35px;
 }
 
-nav ul{
-    display:flex;
+nav ul {
+    display: flex;
     gap: 30px;
 }
 
-nav ul li{
+nav ul li {
     list-style: none;
 }
 
-nav ul li a{
+nav ul li a {
     text-decoration: none;
     color: black;
     padding: 10px;
 }
 
-section{
+section {
     width: 80%;
     margin: 50px auto;
+    display: flex;
+    gap: 30px;
 }
 
-.spline-container{
-    width: 50%;
-    min-width: 30vh;
+section.blogs-container {
+    flex-direction: column;
 }
 
-form{
+form {
     display: flex;
     flex-direction: column;
     width: 50%;
-
+    align-items: center;
 }
-textarea,input{
-    width:100%;
+
+textarea,
+input {
+    width: 100%;
     font-size: 20px;
+    padding: 10px 20px;
 }
 
-textarea{
+textarea:focus,
+input:focus {
+    outline: none;
+}
+
+textarea {
     resize: none;
     padding: 10px 20px;
-    min-height: 100px;
+    min-height: 40vh;
 }
 
-.auth-btn{
+input {
+    padding: 10px 20px;
+    margin-bottom: 20px;
+}
+
+h2 {
+    font-size: 30px;
+    margin-bottom: 20px;
+}
+
+.auth-btn {
     border: 2px solid orange;
     border-radius: 10px;
 }
 
-.left-side{
+.left-side {
     background: grey;
-    width: 50%;
+    flex-basis: 50%;
+    min-height: 50vh;
+}
+
+.spline-container .spline-viewer {
+    width: 100%;
     height: 100%;
+    display: block;
+}
+
+button[type="submit"],
+input[type="submit"] {
+    padding: 10px 20px;
+    font-size: 20px;
+    margin-top: 20px;
+    border: none;
+    background: orange;
+    color: white;
+    border-radius: 10px;
+    cursor: pointer;
+    display: block;
+    width: 100%;
+}
+
+
+.blog {
+    padding: 30px;
+    border-radius: 3px;
+    margin-bottom: 20px;
+    background: rgb(252, 252, 252);
+    box-shadow: 0 0 3px rgb(252, 252, 252);
+}
+
+.blog-title {
+    font-size: 25px;
+    margin-bottom: 10px;
+}
+
+footer {
+    box-shadow: 0 0 3px black;
+    position: relative;
+    bottom: 0;
+    width: 100vw;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
