--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fulcrum : A place to criticize academics</title>
+        <link rel="shortcut icon" href="/static/images/favicon_io/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
@@ -39,6 +40,12 @@
         </nav>
     </header>
     <main>
+        <article class="blogs-intro">
+            <video src="/static/images/blog-discussions.mp4" muted autoplay width="100vw" height="100vsh"></video>
+            <h1 class="main-heading">Blogs</h1>
+            <p class="sub-heading">A collection of articles and insights on academic criticism, educational reform, and
+                empowering voices within the academic community.</p>
+        </article>
         <section class="blogs-container">
             <div class="blog">
                 <h3 class="blog-title">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis, minus!</h3>
