--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fulcrum : A place to criticize academics</title>
+    <link rel="shortcut icon" href="/static/images/favicon_io/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
@@ -40,7 +41,7 @@
     <main>
         <section class="login-container">
             <div class="left-side">
-
+                <img src="/static/images/login.png" alt="Login Illustration" height="100%" width="100%">
             </div>
             <form action="/login">
                 <h2>Be aware of your power!</h2>
