--- a/templates/contact-us.html
+++ b/templates/contact-us.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fulcrum : A place to criticize academics</title>
+        <link rel="shortcut icon" href="/static/images/favicon_io/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
@@ -41,10 +42,11 @@
     <main>
         <section class="contact-us-container">
             <div class="left-side">
-                
+                <spline-viewer url="https://prod.spline.design/oPl8SsDXwyDtvY-z/scene.splinecode"></spline-viewer>
             </div>
             <form action=" /contact-us">
-                <textarea type="text" placeholder="Enter the message you want to convey to us. It may be like complain, issue, problem, suggestion, bugs,etc. Please avoid spamming!!!!!!"></textarea>
+                <textarea type="text"
+                    placeholder="Enter the message you want to convey to us. It may be like complain, issue, problem, suggestion, bugs,etc. Please avoid spamming!!!!!!"></textarea>
                 <button type="submit">Raise Issue</button>
             </form>
         </section>
