--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -12,7 +12,7 @@ body {
 
 header {
     height: 75px;
-    width: 100vw;
+    width: 100%;
     background: rgb(255, 255, 255);
     display: flex;
     align-items: center;
@@ -137,7 +137,7 @@ footer {
     box-shadow: 0 0 3px black;
     position: relative;
     bottom: 0;
-    width: 100vw;
+    width: 100%;
     height: 50px;
     display: flex;
     align-items: center;
