--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -1,113 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
+{% block title %} FulCrum : Place to criticize {% endblock %}
+{% block content %}
+<article class="blogs-intro">
+    <video src="/static/images/blog-discussions.mp4" muted autoplay width="90%"></video>
+    <h1 class="main-heading">Blogs</h1>
+    <p class="sub-heading">A collection of articles and insights on academic criticism, educational reform, and
+        empowering voices within the academic community.</p>
+</article>
+<section class="blogs-container">
+    {% for blog in blogs %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fulcrum : A place to criticize academics</title>
-        <link rel="shortcut icon" href="/static/images/favicon_io/favicon.ico" type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="/static/styles/style.css">
-    <script type="module" src="https://unpkg.com/@splinetool/viewer@1.10.74/build/spline-viewer.js"></script>
-</head>
-
-<body>
-    <header>
-        <div id="logo">
-            <img src="/static/images/logo.png" alt="Logo" height="60px">
-        </div>
-        <nav>
-            <ul>
-                <li>
-                    <a href="/">Raise Issue</a>
-                </li>
-                <li>
-                    <a href="/blogs">Blogs</a>
-                </li>
-                <li>
-                    <a href="/contact-us">Contact Us</a>
-                </li>
-                <li>
-                    <a href="/create-account" class="auth-btn">Create an Account</a>
-                </li>
-                <li>
-                    <a href="/login" class="auth-btn">Login</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <article class="blogs-intro">
-            <video src="/static/images/blog-discussions.mp4" muted autoplay width="100vw" height="100vsh"></video>
-            <h1 class="main-heading">Blogs</h1>
-            <p class="sub-heading">A collection of articles and insights on academic criticism, educational reform, and
-                empowering voices within the academic community.</p>
-        </article>
-        <section class="blogs-container">
-            <div class="blog">
-                <h3 class="blog-title">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis, minus!</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum omnis, fugiat molestiae suscipit
-                    similique culpa optio libero atque inventore nostrum. Sequi numquam cupiditate quia! Assumenda
-                    voluptates eius officia nam in omnis iure laborum fuga reprehenderit repudiandae fugiat libero velit
-                    perspiciatis aspernatur tempora facere, nesciunt esse deserunt molestias molestiae possimus saepe?
-                </p>
-            </div>
-            <div class="blog">
-                <h3 class="blog-title">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis, minus!</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum omnis, fugiat molestiae suscipit
-                    similique culpa optio libero atque inventore nostrum. Sequi numquam cupiditate quia! Assumenda
-                    voluptates eius officia nam in omnis iure laborum fuga reprehenderit repudiandae fugiat libero velit
-                    perspiciatis aspernatur tempora facere, nesciunt esse deserunt molestias molestiae possimus saepe?
-                </p>
-            </div>
-            <div class="blog">
-                <h3 class="blog-title">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis, minus!</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum omnis, fugiat molestiae suscipit
-                    similique culpa optio libero atque inventore nostrum. Sequi numquam cupiditate quia! Assumenda
-                    voluptates eius officia nam in omnis iure laborum fuga reprehenderit repudiandae fugiat libero velit
-                    perspiciatis aspernatur tempora facere, nesciunt esse deserunt molestias molestiae possimus saepe?
-                </p>
-            </div>
-            <div class="blog">
-                <h3 class="blog-title">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis, minus!</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum omnis, fugiat molestiae suscipit
-                    similique culpa optio libero atque inventore nostrum. Sequi numquam cupiditate quia! Assumenda
-                    voluptates eius officia nam in omnis iure laborum fuga reprehenderit repudiandae fugiat libero velit
-                    perspiciatis aspernatur tempora facere, nesciunt esse deserunt molestias molestiae possimus saepe?
-                </p>
-            </div>
-            <div class="blog">
-                <h3 class="blog-title">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis, minus!</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum omnis, fugiat molestiae suscipit
-                    similique culpa optio libero atque inventore nostrum. Sequi numquam cupiditate quia! Assumenda
-                    voluptates eius officia nam in omnis iure laborum fuga reprehenderit repudiandae fugiat libero velit
-                    perspiciatis aspernatur tempora facere, nesciunt esse deserunt molestias molestiae possimus saepe?
-                </p>
-            </div>
-            <div class="blog">
-                <h3 class="blog-title">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis, minus!</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum omnis, fugiat molestiae suscipit
-                    similique culpa optio libero atque inventore nostrum. Sequi numquam cupiditate quia! Assumenda
-                    voluptates eius officia nam in omnis iure laborum fuga reprehenderit repudiandae fugiat libero velit
-                    perspiciatis aspernatur tempora facere, nesciunt esse deserunt molestias molestiae possimus saepe?
-                </p>
-            </div>
-            <div class="blog">
-                <h3 class="blog-title">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis, minus!</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum omnis, fugiat molestiae suscipit
-                    similique culpa optio libero atque inventore nostrum. Sequi numquam cupiditate quia! Assumenda
-                    voluptates eius officia nam in omnis iure laborum fuga reprehenderit repudiandae fugiat libero velit
-                    perspiciatis aspernatur tempora facere, nesciunt esse deserunt molestias molestiae possimus saepe?
-                </p>
-            </div>
-        </section>
-    </main>
-    <footer>
-        &copy; 2025 Fulcrum. All rights reserved.
-    </footer>
-</body>
-
-</html>
+    <div class="blog">
+        <h3 class="blog-title">{{ blog.title}}</h3>
+        <p> {{blog.description}}</p>
+    </div>
+    {% endfor %}
+</section>
+{% endblock %}
