--- a/templates/create-account.html
+++ b/templates/create-account.html
@@ -1,59 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
+{% block title %} FulCrum : Create an account {% endblock %}
+{% block content %}
+<section class="sigin-container">
+    <div class="left-side">
+        <img src="/static/images/create-account.png" alt="Create Account Illustration" height="100%" width="100%">
+    </div>
+    <form action="/create-account" method="POST">
+        <input type="email" placeholder="Enter email" name="email">
+        <input type="number" placeholder="Enter year in which you studying right now." name="current_study_year">
+        <input type="password" placeholder="Enter password" name="password">
+        <input type="submit" value="Login">
+    </form>
+</section>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fulcrum : A place to criticize academics</title>
-        <link rel="shortcut icon" href="/static/images/favicon_io/favicon.ico" type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="/static/styles/style.css">
-</head>
-
-<body>
-    <header>
-        <div id="logo">
-            <img src="/static/images/logo.png" alt="Logo" height="60px">
-        </div>
-        <nav>
-            <ul>
-                <li>
-                    <a href="/">Raise Issue</a>
-                </li>
-                <li>
-                    <a href="/blogs">Blogs</a>
-                </li>
-                <li>
-                    <a href="/contact-us">Contact Us</a>
-                </li>
-                <li>
-                    <a href="/create-account" class="auth-btn">Create an Account</a>
-                </li>
-                <li>
-                    <a href="/login" class="auth-btn">Login</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="sigin-container">
-            <div class="left-side">
-                <img src="/static/images/create-account.png" alt="Create Account Illustration" height="100%" width="100%">
-            </div>
-            <form action="/login">
-                <input type="email" placeholder="Enter email">
-                <input type="number" placeholder="Enter year in which you enrolled">
-                <input type="password" placeholder="Enter password">
-                <input type="submit" value="Login">
-            </form>
-        </section>
-    </main>
-    <footer>
-        &copy; 2025 Fulcrum. All rights reserved.
-    </footer>
-</body>
-
-</html>
+{{ message }}
+{% endblock %}
