--- a/templates/create-account.html
+++ b/templates/create-account.html
@@ -6,10 +6,11 @@
         <img src="/static/images/create-account.png" alt="Create Account Illustration" height="100%" width="100%">
     </div>
     <form action="/create-account" method="POST">
+        <input type="name" placeholder="Enter name" name="name">
         <input type="email" placeholder="Enter email" name="email">
         <input type="number" placeholder="Enter year in which you studying right now." name="current_study_year">
         <input type="password" placeholder="Enter password" name="password">
-        <input type="submit" value="Login">
+        <input type="submit" value="Create Account">
     </form>
 </section>
 
