--- a/templates/login.html
+++ b/templates/login.html
@@ -11,5 +11,6 @@
         <input type="password" placeholder="Enter password">
         <input type="submit" value="Login">
     </form>
+    {{ messsage }}
 </section>
 {% endblock %}
